--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,6 +12,9 @@
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
   {{ partial "style.html" . }}
+  {{- if and (hugo.IsProduction) (.Site.Params.gid) -}}
+  {{ partial "gtag.html" . }}
+  {{ end -}}
 </head>
 <body>
 <header>
