--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 <content>
   {{ if .Data.Singular }}
-  <h3 style="margin-bottom:0">Filtering for "{{ .Title }}"</h3>
+  <h3 style="margin-bottom:0">筛选："{{ .Title }}"</h3>
   <small>
-    <a href="{{ "/blog" | relURL }}">Remove filter</a>
+    <a href="{{ "/blog" | relURL }}">取消筛选</a>
   </small>
   {{ end }}
   <ul class="blog-posts">
