--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,1 +1,1 @@
-Copyright © 2022 <a href="https://up.ac.cn">Plato</a>
+Copyright © 2022 <a href="https://up.ac.cn">Plato</a>. 订阅网站 <a href="https://up.ac.cn/index.xml" target="_blank">RSS</a>
